<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/message"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="false"
                android:layout_toRightOf="@+id/textView"
                android:layout_alignBaseline="@+id/textView"
                android:layout_marginRight="10dip"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/message"
                android:id="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="20dip"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/send_by"
                android:id="@+id/textView2"
                android:layout_alignBottom="@+id/horizontalScrollView"
                android:layout_alignLeft="@+id/textView"
                android:layout_marginBottom="4dip"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:id="@+id/send"
                android:layout_below="@+id/horizontalScrollView"
                android:layout_alignRight="@+id/message"
                android:layout_marginTop="20dp"
                android:layout_alignLeft="@+id/textView2"/>

        <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontalScrollView"
                android:layout_alignLeft="@+id/message"
                android:layout_alignRight="@+id/message"
                android:layout_below="@+id/message"
                android:layout_marginTop="20dp">

            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dip"
                    android:id="@+id/radioGroup"
                    android:orientation="horizontal"
                    >

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sms"
                        android:id="@+id/sms"
                        android:checked="false"/>

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:text="@string/email"
                        android:id="@+id/email"
                        android:checked="false"
                        android:layout_marginLeft="10dip"/>

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:text="@string/twitter"
                        android:id="@+id/twitter"
                        android:layout_marginLeft="10dip"/>

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:text="@string/facebook"
                        android:id="@+id/facebook"
                        android:layout_marginLeft="10dp"/>

            </RadioGroup>
        </HorizontalScrollView>

    </RelativeLayout>
</ScrollView>
